--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
   <body class="starting-display">
     <button>Gimmee Food</button>
     <div id="meal"></div>
-    <script type="module" src="/dist/index.js" async defer></script>
+    <script type="module" src="../dist/index.js" async defer></script>
   </body>
 </html>
